# podcas

./: .gitignore  README.md
podcas/: README.md  pyproject.toml
podcas-api/: README.md  pyproject.toml
podcas-api/podcas_api/: cache.py  queries.py  server.py
podcas/podcas/: __init__.py  datastore.py  embedder.py  podcastsearch.py  reviewsearch.py
podcas/podcas/data/: __init__.py  _datastore.py  entities.py
podcas/podcas/ml/: __init__.py  _embedder.py  _mooder.py  _summarizer.py  _textdataset.py
podcas/podcas/search/: __init__.py  _episodesearch.py  _podcastsearch.py  _reviewsearch.py
