[tool.poetry]
name = "podcas-api"
version = "0.1.0"
description = ""
authors = ["Rami Kader <ramy.kader.rk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.9"
fastapi = {extras = ["standard"], version = "^0.114.0"}
huggingface-hub = "^0.24.6"
podcas = {path = "../podcas"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
